#18 prepare Tree for migration
- add Tree properties:
  - diameterOfCrown
  - heightOfTheFirstBranch
  - numberOfTreeTrunks
  - treeHeight
  - trunkGirth
