# contract/openapi/citytrees-public-api-v1.openapi.yml
@@ -523,24 +523,28 @@ paths:
           required: true
           schema:
             type: number
+            format: double
         - name: y1
           description: top left longitude
           in: query
           required: true
           schema:
             type: number
+            format: double
         - name: x2
           description: bottom right latitude
           in: query
           required: true
           schema:
             type: number
+            format: double
         - name: y2
           description: bottom right longitude
           in: query
           required: true
           schema:
             type: number
+            format: double
       responses:
         200:
           description: Trees in specified region
@@ -570,24 +574,28 @@ paths:
           required: true
           schema:
             type: number
+            format: double
         - name: y1
           description: top left longitude
           in: query
           required: true
           schema:
             type: number
+            format: double
         - name: x2
           description: bottom right latitude
           in: query
           required: true
           schema:
             type: number
+            format: double
         - name: y2
           description: bottom right longitude
           in: query
           required: true
           schema:
             type: number
+            format: double
       responses:
         200:
           description: Trees clusters in specified region
@@ -616,13 +624,13 @@ paths:
           in: path
           required: true
           schema:
-            type: number
+            type: integer
             maximum: 50
         - name: offset
           in: path
           required: true
           schema:
-            type: number
+            type: integer
       responses:
         200:
           description: OK
@@ -1029,7 +1037,6 @@ components:
         - status
         - latitude
         - longitude
-        - fileIds
       properties:
         id:
           type: string
@@ -1055,8 +1062,7 @@ components:
         state:
           $ref: '#/components/schemas/TreeState'
         age:
-          type: number
-          format: integer
+          type: integer
         condition:
           $ref: '#/components/schemas/TreeCondition'
         barkCondition:
@@ -1075,6 +1081,20 @@ components:
           type: array
           items:
             type: string
+        diameterOfCrown:
+          type: number
+          format: double
+        heightOfTheFirstBranch:
+          type: number
+          format: double
+        numberOfTreeTrunks:
+          type: integer
+        treeHeight:
+          type: number
+          format: double
+        trunkGirth:
+          type: number
+          format: double
 
     TreeGetAttachedFileResponse:
       type: object
@@ -1089,9 +1109,8 @@ components:
           format: uuid
           example: ed156378-204b-473c-9d2a-886941a819ff
         size:
-          type: number
-          format: integer
-          example: 0.0
+          type: integer
+          format: int64
         name:
           type: string
         url:
@@ -1110,8 +1129,7 @@ components:
         state:
           $ref: '#/components/schemas/TreeState'
         age:
-          type: number
-          format: integer
+          type: integer
         condition:
           $ref: '#/components/schemas/TreeCondition'
         barkCondition:
@@ -1131,6 +1149,21 @@ components:
           items:
             type: string
             format: uuid
+        diameterOfCrown:
+          type: number
+          format: double
+        heightOfTheFirstBranch:
+          type: number
+          format: double
+        numberOfTreeTrunks:
+          type: integer
+          format: double
+        treeHeight:
+          type: number
+          format: double
+        trunkGirth:
+          type: number
+          format: double
 
     TreeCountAllGetResponse:
       type: object
@@ -1138,7 +1171,8 @@ components:
         - count
       properties:
         count:
-          type: number
+          type: integer
+          format: int64
 
     TreesByRegionRequest:
       type: object
@@ -1209,8 +1243,8 @@ components:
           format: double
           example: 0.0
         count:
-          type: number
-          format: integer
+          type: integer
+          format: int64
 
     WoodTypeCreateRequest:
       type: object
